--- a/src/index.scss
+++ b/src/index.scss
@@ -28,13 +28,13 @@ code {
 html[data-theme='dark'] {
   --background-color: #313735;
   --color: white;
-  --color-card: white;
+  --color-card: #ffffff;
   --border-color: 1px solid #4d4c4c;
   --background-color-btn: #6f7084;
 }
 
 html[data-theme='light'] {
-  --background-color: #f6f6f6;
+  --background-color: #ffffff;
   --color: black;
   --color-card: black;
   --border-color: 1px solid #e5e5e5;
